infrastructure/cilium/hubble-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui-ingress
  namespace: kube-system 
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: hubble.local  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hubble-ui 
            port:
              number: 80
